--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Mav's Portfolio</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 </head>
+
 <body>
   <section class="w3-container">
    <h1>Links to my work: </h1>
@@ -14,5 +15,18 @@
     </ul>
    </nav>
   </section>
+<script>
+  let y = 60;
+
+let x = "hi";
+
+window.alert(`my variables are \n${x}, ${y}`);
+document.write(`my variables are \n${x}, ${y}`);
+console.log(`my variables are \n${x}, ${y}`);
+
+</script>
+
+
 </body>
 </html>
+                                                                                        
