--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <body>
   <section class="w3-container">
-   <h1>Links to my work: </h1>
+   <h1>~Links to my work~ </h1>
    <h2> :v </h2>
    <nav>
     <ul>
-      <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
+      <li><a href="./public/Q1_1NGLiCruz.html"> First Exercise: Variable Declaration </a> </li>
     </ul>
    </nav>
   </section>
@@ -20,13 +20,13 @@
 
 let x = "hi";
 
-window.alert(`my variables are \n${x}, ${y}`);
-document.write(`my variables are \n${x}, ${y}`);
-console.log(`my variables are \n${x}, ${y}`);
+//window.alert(`my variables are \n${x}, ${y}`);
+//document.write(`my variables are <br/>${x}, ${y}`);
+//console.log(`my variables are \n${x}, ${y}`);
 
 </script>
 
 
 </body>
 </html>
-                                                                                        
+                                     
