--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
   <section class="w3-container">
    <h1>~Links to my work~ </h1>
-   <h2> :v </h2>
+   <h2>  </h2>
    <nav>
     <ul>
       <li><a href="./public/Q1_1NGLiCruz.html"> First Exercise: Variable Declaration </a> </li>
+      <li><a href="./public/Q12GLithiumCruz.html"> Second Exercise (graded): Meal Plan</a> </li> 
     </ul>
    </nav>
   </section>
