--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="./public/Q1_1NGLiCruz.html"> First Exercise: Variable Declaration </a> </li>
       <li><a href="./public/Q12GLithiumCruz.html"> Second Exercise (graded): Meal Plan</a> </li> 
+      <li><a href="./public/Q13GLithiumCruz.html"> Third Exercise (graded): Number Guesser</a> </li> 
     </ul>
    </nav>
   </section>
